# zunder

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.github/workflows/: publish-libs.yml  test.yml
apps/admin-ui/: .env.example  README.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/admin-ui/components/: AppSidebar.tsx  BundleTableView.tsx  DashboardDisplay.tsx  ResourceTableView.tsx  ResourcesDisplay.tsx  ResultTabs.tsx  SearchInput.tsx  ThemeToggle.tsx
apps/admin-ui/lib/: config.ts
apps/admin-ui/lib/api/: fetcher.ts  fhir.ts
apps/admin-ui/server/: proxy.ts
apps/admin-ui/src/: app.css
apps/admin-ui/src/api/: fhirpath.ts  jobs.ts  operations.ts  query-keys.ts  references.ts  terminology.ts
apps/admin-ui/src/components/: ApiDisplay.tsx  AppSidebar.tsx  AuditEventDisplay.tsx  AuthGuard.tsx  BundleTableView.tsx  CapabilityStatementDisplay.tsx  ConnectionGuard.tsx  ConnectionIndicator.tsx  DashboardDisplay.tsx  FhirPathPlayground.tsx  JobsDisplay.tsx  JsonViewer.tsx  OperationsDisplay.tsx  PackageDetailDisplay.tsx  PageHeader.tsx  ReferenceGraph.tsx  ResourceTableView.tsx  ResourcesDisplay.tsx  ResultTabs.tsx  TerminologyDisplay.tsx  TransactionDisplay.tsx
apps/admin-ui/src/components/SearchParameters/: SearchCompartmentsDisplay.tsx  SearchCoverageDisplay.tsx  SearchIndexTablesDisplay.tsx  SearchParameterDisplay.tsx
apps/admin-ui/src/components/Settings/: SettingsDisplay.tsx
apps/admin-ui/src/lib/: config.ts
apps/admin-ui/src/routes/: fhirpath.tsx  operations.tsx  packages.tsx  root.tsx  router.ts  terminology.tsx
apps/cli/src/: main.rs
apps/server/: Cargo.toml  Dockerfile
apps/server/src/: admin_auth.rs  config.rs  conformance.rs  main.rs  startup.rs  state.rs  worker.rs
apps/server/src/api/handlers/: admin.rs  jobs.rs  runtime_config.rs
apps/server/src/api/middleware/: audit.rs  security.rs
apps/server/src/api/routes/: admin.rs
apps/server/src/db/: admin.rs  store.rs
apps/server/src/db/search/engine/: includes.rs
apps/server/src/models/: operations.rs
apps/server/src/queue/: inline.rs  postgres.rs  traits.rs
apps/server/src/runtime_config/: keys.rs
apps/server/src/services/: admin.rs  batch.rs  crud.rs  mod.rs  operation_executor.rs  operation_registry.rs  referential_integrity.rs  transaction.rs
apps/server/src/services/indexing/: bulk.rs  mod.rs
apps/server/src/workers/: package_worker.rs  state.rs
apps/server/tests/: audit_log_storage.rs  batch_conditional_references.rs  batch_transaction_conditional.rs  common_meta_parameters_spec_tests.rs  compartment_search.rs  content_negotiation_tests.rs  crud_tests.rs  everything_tests.rs  fhir_crud_search.rs  history_tests.rs  indexing_resolve.rs  search_tests.rs  security_posture_tests.rs  terminology_operations.rs  transaction_conditional_references.rs
apps/server/tests/crud/: mod.rs  referential_integrity.rs
apps/server/tests/search/: includes.rs  mod.rs
docker/: compose.hetzner.yaml  compose.local.yaml  config.yaml
docs/server/: referential-integrity.mdx
libs/fhir-client-ts/: README.md  package-lock.json  package.json
libs/fhir-context/: README.md
libs/fhir-context/src/: context.rs  version.rs
libs/fhir-context/tests/: test_context_types.rs
libs/fhir-format/: README.md
libs/fhir-format/src/: fhir_type_metadata.json  lib.rs
libs/fhir-models/src/common/: complex.rs  structure_definition.rs
libs/fhir-registry-client/src/: async_client.rs  cache.rs
libs/fhir-snapshot/: Cargo.toml  README.md
libs/fhir-snapshot/src/: expander.rs  generator.rs  inheritance.rs  merge.rs  snapshot_generation.rs  validation.rs
libs/fhir-snapshot/tests/: test_fhir_test_cases.rs
libs/fhir-snapshot/tests/test_output/: StructureDefinition-ratio-measure-cqfm-diff.txt  StructureDefinition-ratio-measure-cqfm-expected.json  StructureDefinition-ratio-measure-cqfm-generated.json  ch-location-diff.txt  ch-location-expected.json  ch-location-generated.json  location-qicore-diff.txt  location-qicore-expected.json  location-qicore-generated.json  nl-core-NursingIntervention-diff.txt  nl-core-NursingIntervention-expected.json  nl-core-NursingIntervention-generated.json  obs-perf-diff.txt  obs-perf-expected.json  obs-perf-generated.json  prov-fi-diff.txt  prov-fi-expected.json  prov-fi-generated.json  simple-quantity-2-diff.txt  simple-quantity-2-expected.json  simple-quantity-2-generated.json  simple-quantity-3-diff.txt  simple-quantity-3-expected.json  simple-quantity-3-generated.json  simple-quantity-diff.txt  simple-quantity-expected.json  simple-quantity-generated.json  slice-cardinality-derived-diff.txt  slice-cardinality-derived-expected.json  slice-cardinality-derived-generated.json  zib-NursingIntervention-diff.txt  zib-NursingIntervention-expected.json  zib-NursingIntervention-generated.json
libs/fhir-validator/: Cargo.toml
libs/fhir-validator/notes/: server-terminology-gaps.md  validation-hapi-comparison.md  validation-implementation-plan.md
libs/fhir-validator/src/: lib.rs  validator.rs
libs/fhir-validator/src/steps/: constraints.rs  mod.rs  schema.rs  terminology.rs
libs/fhir-validator/src/terminology/: in_memory.rs  mod.rs  provider.rs
libs/fhir-validator/tests/: official_suite.rs
libs/fhir-validator/tests/test_support/: mod.rs
libs/fhirpath/: README.md
libs/fhirpath/src/: conversion.rs  typecheck.rs  value.rs  vm.rs
libs/fhirpath/src/vm/: operations.rs
libs/fhirpath/src/vm/functions/: boolean.rs  subsetting.rs  type_helpers.rs  type_op.rs
libs/fhirpath/tests/: test_type_checking.rs
libs/fhirpath/tests/integration/: test_as.rs
libs/ucum/src/: db.rs  parser.rs  unit.rs
quickstart/: .env.example  README.md  compose.monitoring.yaml  compose.yaml  config.yaml  install.sh
quickstart/monitoring/: Dockerfile.prometheus  README.md  init-monitoring.sql  otel-collector-config.yaml  postgres-exporter-queries.yaml  prometheus-entrypoint.sh  prometheus.yml.template  tempo-config.yaml
quickstart/monitoring/grafana/dashboards/: fhir-operations.json  fhir-server-overview.json  postgresql-fhir.json
scripts/: release-dist.sh
(+2 files in other folders)
