[workspace]
members = [
    # Apps
    "apps/server",
    "apps/cli",

    # Libraries
    "libs/fhir-codegen",
    "libs/fhir-context",
    "libs/fhir-format",
    "libs/fhir-models",
    "libs/fhir-package",
    "libs/fhir-snapshot",
    "libs/fhirpath",
    "libs/fhir-validator",
    "libs/fhir-registry-client",
    "libs/ucum",
]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
authors = ["Thalamiq GmbH <till@thalamiq.io>"]
repository = "https://github.com/thalamiq/zunder"
homepage = "https://thalamiq.io"
documentation = "https://docs.thalamiq.io"
keywords = ["fhir", "healthcare", "api", "interoperability"]
categories = ["development-tools", "api-bindings"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
heck = "0.5"
html-escape = "0.2"
hex = "0.4"
lru = "0.12"
phf = { version = "0.11", features = ["macros"] }
regex = "1.10"
rust_decimal = { version = "1.37", features = ["serde"] }
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.13"
thiserror = "1"
tokio = "1"
tracing = "0.1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Internal crates (for use in workspace members)
# Both `path` (for local dev) and `version` (for crates.io publish) are required.
zunder-models = { path = "libs/fhir-models", version = "0.1.10" }
zunder-context = { path = "libs/fhir-context", version = "0.1.10" }
zunder-format = { path = "libs/fhir-format", version = "0.1.10" }
zunder-snapshot = { path = "libs/fhir-snapshot", version = "0.1.10" }
zunder-package = { path = "libs/fhir-package", version = "0.1.10" }
zunder-registry-client = { path = "libs/fhir-registry-client", version = "0.1.10" }
zunder-codegen = { path = "libs/fhir-codegen", version = "0.1.10" }
zunder-validator = { path = "libs/fhir-validator", version = "0.1.10" }
zunder-fhirpath = { path = "libs/fhirpath", version = "0.1.10" }
zunder-ucum = { path = "libs/ucum", version = "0.1.10" }
