[package]
name = "zunder-validator"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR resource validation engine."
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
zunder-context.workspace = true
zunder-fhirpath.workspace = true
zunder-models.workspace = true
zunder-snapshot.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json = { workspace = true }
